@startuml

class CPU
{
  init( instructionMemory )
  cycle()
}

class ControlUnit
{
  RegDst
  RegWrite
  ALUSrc
  ALUOp
  MemWrite
  MemRead
  MemToReg
  __init__()
  setControlSignals( operation )
}

class InstructionDecode
{
  registerFile
  readRegister1
  readRegister2
  immediate
  writeRegister
  supportedInstructions
  execute()
  readFromRegister( register )
  writeToRegister( data )
}

class InstructionFetch
{
PC
instructionMemory
instruction
__init__( instructionMemory )
execute()
}

class Execution
{
  ALUResult
  execute()
}

class MemoryAccess
{
  dataMemory
  readData
  execute()
}

class WriteBack
{
  execute()
}

CPU *-- ControlUnit
CPU *-- InstructionDecode
CPU *-- InstructionFetch
CPU *-- Execution
CPU *-- MemoryAccess
CPU *-- WriteBack

InstructionDecode *-- ControlUnit
InstructionDecode *-- InstructionFetch

Execution *-- ControlUnit
Execution *-- InstructionDecode

MemoryAccess *-- ControlUnit
MemoryAccess *-- InstructionDecode
MemoryAccess *-- Execution

WriteBack *-- ControlUnit
WriteBack *-- InstructionDecode
WriteBack *-- Execution
WriteBack *-- MemoryAccess

@enduml